# rayz-shared

./: .gitignore  CMakeLists.txt  Kconfig  README.md  library.json  migration_to_freertos.md  package.json
docs/: protocol.md
examples/: example_usage.cpp  platformio.ini.target  platformio.ini.weapon
include/: ble_config.h  ble_target.h  ble_weapon.h  debug_print.h  display_manager.h  espnow_comm.h  game_protocol.h  game_state.h  gpio_init.h  hash.h  http_api.h  nvs_store.h  protocol_config.h  rayz_common.h  runtime_metrics.h  utils.h  wifi_internal.h  wifi_manager.h  ws_client.h  ws_server.h  ws_server_optimized.h
partitions/: huge_app.csv
src/: ble_target.cpp  ble_weapon.cpp  debug_print.cpp  display_manager.cpp  espnow_comm.cpp  game_state.cpp  gpio_init.cpp  http_api.cpp  nvs_store.cpp  runtime_metrics.cpp  utils.cpp  wifi_core.cpp  wifi_http.cpp  wifi_manager.cpp  wifi_state.cpp  ws_client.cpp  ws_server.cpp  ws_server_optimized.backup.cpp  ws_server_optimized.cpp
